login page front end complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EventMe</string>
+    <string name="guestText"><u>Continue as a guest >></u></string>
 </resources>
