SortBy Drop Down Menu Update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">EventMe</string>
     <string name="guestText"><u>Continue as a guest >></u></string>
     <string name="backicon">\u21e6</string>
+    <string-array name="sortBy">
+        <item>Cost</item>
+        <item>Distance</item>
+        <item>Date</item>
+    <item>Alphabet</item> </string-array>
 </resources>
