--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">EventMe</string>
     <string name="guestText"><u>Continue as a guest >></u></string>
     <string name="backicon">\u21e6</string>
+    <string name="halfstar">\u2be8</string>
+    <string name="star">\u2605</string>
     <string-array name="sortBy">
         <item>cost</item>
         <item>distance</item>
